# SmartControl-Desktop

./: .gitignore  AppController.cpp  AppController.h  CMakeLists.txt  LICENSE.txt  Main.qml  README.md  appveyor.yml  clean_windows_build.bat  main.cpp
btuicontrols/: ANCCard2.qml  ANCCardHelper.cpp  BluetoothHandler.cpp  BluetoothHandler.h  CMakeLists.txt  CallSettingsCard.qml  ConnectedDevicesCard.qml  ConnectedDevicesCardHelper.cpp  ConnectedDevicesCardHelper.h  DeviceInfoCard.qml  DeviceListPage.qml  DevicePage.qml  FoundDeviceCard.qml  OnHeadSettingsCard.qml  SettingsDialog.qml  UiHelper.qml
gaiaV3/: BluetoothSocketWrapper.cpp  BluetoothSocketWrapper.h  CMakeLists.txt  GAIAPropertyBase.cpp  GAIAPropertyBase.h  GAIAPropertyClasses.cpp  GAIAPropertyClasses.h  GAIAPropertyManager.cpp  GAIAPropertyManager.h  GAIAPropertyManagerBase.h  GAIARfcommClient.cpp  GAIARfcommClient.h  gaiaV3_export.h
gaiaV3/scripts/: property_creator.py  property_manager_creator.py
gaiaV3/tests/: CMakeLists.txt  test_BluetoothSocketWrapper.cpp  test_GAIAPropertyBase.cpp  test_GAIARfcommClient.cpp
